version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/Application/Messages.rst.txt
.. vale off



:class:`Messages`
=================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.Application.Messages

   Bases: :py:obj:`object`


   
   Defines the collection of Mechanical's messages.
















   ..
       !! processed by numpydoc !!





.. py:currentmodule:: Messages

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~OnAddMessageFwd`
            - OnAddMessageFwd method.
          * - :py:attr:`~add_OnAddMessage`
            - add_OnAddMessage method.
          * - :py:attr:`~remove_OnAddMessage`
            - remove_OnAddMessage method.


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Add`
            - Add a new message.
          * - :py:attr:`~Clear`
            - Clear the list of the messages.
          * - :py:attr:`~Contains`
            - Check if a message is in the current list of messages.
          * - :py:attr:`~CopyTo`
            - CopyTo method.
          * - :py:attr:`~CountErrorMessages`
            - CountErrorMessages method.
          * - :py:attr:`~CountInfoMessages`
            - CountInfoMessages method.
          * - :py:attr:`~CountWarningMessages`
            - CountWarningMessages method.
          * - :py:attr:`~GetEnumerator`
            - GetEnumerator method.
          * - :py:attr:`~HideErrorMessages`
            - HideErrorMessages method.
          * - :py:attr:`~HideInfoMessages`
            - HideInfoMessages method.
          * - :py:attr:`~HidePopUps`
            - HidePopUps method.
          * - :py:attr:`~HideWarningMessages`
            - HideWarningMessages method.
          * - :py:attr:`~MergeMessages`
            - MergeMessages method.
          * - :py:attr:`~Remove`
            - Remove a specific message in the list.
          * - :py:attr:`~ShowErrorMessages`
            - ShowErrorMessages method.
          * - :py:attr:`~ShowErrors`
            - Shows errors with current project.
          * - :py:attr:`~ShowInfoMessages`
            - ShowInfoMessages method.
          * - :py:attr:`~ShowPopUps`
            - ShowPopUps method.
          * - :py:attr:`~ShowWarningMessages`
            - ShowWarningMessages method.
          * - :py:attr:`~UnmergeMessages`
            - UnmergeMessages method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AllVisibleMessages`
            - AllVisibleMessages property.
          * - :py:attr:`~Count`
            - Get the number of messages.
          * - :py:attr:`~IsReadOnly`
            - IsReadOnly property.
          * - :py:attr:`~Item`
            - Item property.







Property detail
---------------
.. py:property:: AllVisibleMessages
   :type: Optional[List[Ansys.Mechanical.Application.Message]]


   
   AllVisibleMessages property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Count
   :type: Optional[int]


   
   Get the number of messages.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsReadOnly
   :type: Optional[bool]


   
   IsReadOnly property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Ansys.Mechanical.Application.Message]


   
   Item property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Add(item: Ansys.Mechanical.Application.Message) -> None

   
   Add a new message.

   ..
       !! processed by numpydoc !!

.. py:method:: Clear() -> None

   
   Clear the list of the messages.

   ..
       !! processed by numpydoc !!

.. py:method:: Contains(item: Ansys.Mechanical.Application.Message) -> bool

   
   Check if a message is in the current list of messages.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(array: Ansys.Mechanical.Application.Message, arrayIndex: int) -> None

   
   CopyTo method.

   ..
       !! processed by numpydoc !!

.. py:method:: CountErrorMessages() -> int

   
   CountErrorMessages method.

   ..
       !! processed by numpydoc !!

.. py:method:: CountInfoMessages() -> int

   
   CountInfoMessages method.

   ..
       !! processed by numpydoc !!

.. py:method:: CountWarningMessages() -> int

   
   CountWarningMessages method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> Ansys.Mechanical.Application.MessageList

   
   GetEnumerator method.

   ..
       !! processed by numpydoc !!

.. py:method:: HideErrorMessages() -> None

   
   HideErrorMessages method.

   ..
       !! processed by numpydoc !!

.. py:method:: HideInfoMessages() -> None

   
   HideInfoMessages method.

   ..
       !! processed by numpydoc !!

.. py:method:: HidePopUps() -> None

   
   HidePopUps method.

   ..
       !! processed by numpydoc !!

.. py:method:: HideWarningMessages() -> None

   
   HideWarningMessages method.

   ..
       !! processed by numpydoc !!

.. py:method:: MergeMessages() -> None

   
   MergeMessages method.

   ..
       !! processed by numpydoc !!

.. py:method:: OnAddMessageFwd(sender: Any, args: Any) -> None
   :classmethod:


   
   OnAddMessageFwd method.

   ..
       !! processed by numpydoc !!

.. py:method:: Remove(item: Ansys.Mechanical.Application.Message) -> bool

   
   Remove a specific message in the list.

   ..
       !! processed by numpydoc !!

.. py:method:: ShowErrorMessages() -> None

   
   ShowErrorMessages method.

   ..
       !! processed by numpydoc !!

.. py:method:: ShowErrors() -> None

   
   Shows errors with current project.

   ..
       !! processed by numpydoc !!

.. py:method:: ShowInfoMessages() -> None

   
   ShowInfoMessages method.

   ..
       !! processed by numpydoc !!

.. py:method:: ShowPopUps() -> None

   
   ShowPopUps method.

   ..
       !! processed by numpydoc !!

.. py:method:: ShowWarningMessages() -> None

   
   ShowWarningMessages method.

   ..
       !! processed by numpydoc !!

.. py:method:: UnmergeMessages() -> None

   
   UnmergeMessages method.

   ..
       !! processed by numpydoc !!

.. py:method:: add_OnAddMessage(value: System.EventHandler[Ansys.Mechanical.Application.Message]) -> None
   :classmethod:


   
   add_OnAddMessage method.

   ..
       !! processed by numpydoc !!

.. py:method:: remove_OnAddMessage(value: System.EventHandler[Ansys.Mechanical.Application.Message]) -> None
   :classmethod:


   
   remove_OnAddMessage method.

   ..
       !! processed by numpydoc !!



.. vale on